[tool.poetry]
name = "pdf chatbot"
version = "0.1.0"
description = "A chatbot that is capable enough in answering questions related to the given PDF "
authors = ["Sathvika-Kopalli"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
langchain = "^0.2.11"
langchain-community = "^0.2.10"
pypdf2 = "^3.0.1"
streamlit = "^1.36.0"
python-dotenv = "^1.0.1"
sentence-transformers = "^3.0.1"
chromadb = "^0.5.5"
protobuf = "==3.20.*"
replicate = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
